# trans_image

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  changelog.md  conventions.md  data-models.md  fix.md  main.py  pipeline.md  plugin-dev-guide.md  plugins.md  pyproject.toml  setup.md
.claude/: settings.local.json
assets/styles/: dark.qss  light.qss  main.qss
config/: default_config.yaml  plugins.yaml
docs/: changelog.md  chat_interface.md  pipeline.md  plugins.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/memory/: query_20260424_050205_why_does_textregion_connect_agent_analysis_utiliti.md
scripts/: download_fonts.py  download_fonts.sh  lint.sh
src/: __main__.py  app.py
src/chat/: __init__.py  batch_processor.py  chat_agent.py  conversation.py  message_parser.py
src/core/: config_manager.py  exceptions.py  pipeline.py  plugin_manager.py  plugin_registry_models.py  session.py  settings_models.py
src/gui/: main_window.py  theme.py
src/models/: __init__.py  export_options.py  processing_job.py  text_region.py  translation_result.py
src/services/: export_service.py  font_service.py  inpainting_service.py  language_service.py  ocr_service.py  rendering_service.py
src/utils/: bbox_utils.py  env_loader.py  image_utils.py  logger.py
tests/: conftest.py
tests/integration/: test_pipeline_e2e.py  test_pipeline_mock.py
tests/unit/: test_agent_plugins.py  test_app_entrypoints.py  test_batch_processor.py  test_batch_worker.py  test_bbox_utils.py  (+37 more)
(+33 files in other folders)
